--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "bookshelf": "^0.10.2",
     "bootstrap": "^3.3.7",
     "express": "^4.14.0",
+    "jsonwebtoken": "^7.1.9",
     "knex": "^0.12.3",
+    "morgan": "^1.7.0",
     "mysql": "^2.11.1",
     "nodemon": "^1.11.0"
   }
