--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "cheerio": "^0.22.0",
     "express": "^4.14.0",
     "jsonwebtoken": "^7.1.9",
-    "knex": "^0.12.3",
+    "knex": "^0.12.6",
     "morgan": "^1.7.0",
     "mysql": "^2.11.1",
     "nodemon": "^1.11.0",
+    "sqlite3": "^3.1.8",
     "string": "^3.3.3"
   }
 }
