--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "mysql": "^2.11.1",
     "nodemon": "^1.11.0",
     "sqlite3": "^3.1.8",
-    "string": "^3.3.3",
-    "unescape": "^0.2.0"
+    "string": "^3.3.3"
   }
 }
