--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "nodemon": "^1.11.0",
     "sqlite3": "^3.1.8",
     "string": "^3.3.3"
+  },
+  "devDependencies": {
+    "standard": "^8.6.0"
   }
 }
