--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "string": "^3.3.3"
   },
   "devDependencies": {
-    "standard": "^8.6.0"
+    "node-sass": "^4.5.3",
+    "raw-loader": "^0.5.1",
+    "sass-loader": "^6.0.6",
+    "standard": "^8.6.0",
+    "webpack": "^3.0.0"
   }
 }
