--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
     "bookshelf": "^0.10.2",
     "bootstrap": "^3.3.7",
     "cheerio": "^0.22.0",
+    "csv-parser": "^1.11.0",
     "express": "^4.14.0",
     "jsonwebtoken": "^7.1.9",
     "knex": "^0.12.6",
     "morgan": "^1.7.0",
+    "multer": "^1.3.0",
     "mysql": "^2.11.1",
     "nodemon": "^1.11.0",
     "sqlite3": "^3.1.8",
+    "streamifier": "^0.1.1",
     "string": "^3.3.3"
   },
   "devDependencies": {
