--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --progress --color",
-    "serve": "nodemon -e js --ignore public",
-    "start": "npm run build && npm run serve"
+    "build-watch": "webpack --progress --color --watch",
+    "serve": "nodemon -e js --ignore public --ignore dist --ignore webpack.*",
+    "start": "npm run build-watch | npm run serve"
   },
   "author": "",
   "license": "ISC",
@@ -20,17 +21,19 @@
     "bookshelf": "^0.10.2",
     "bootstrap": "^3.3.7",
     "cheerio": "^0.22.0",
+    "copy-webpack-plugin": "^4.0.1",
     "csv-parser": "^1.11.0",
     "express": "^4.14.0",
+    "html-webpack-plugin": "^2.29.0",
     "jsonwebtoken": "^7.1.9",
     "knex": "^0.12.6",
-    "morgan": "^1.7.0",
     "multer": "^1.3.0",
     "mysql": "^2.11.1",
     "nodemon": "^1.11.0",
     "sqlite3": "^3.1.8",
     "streamifier": "^0.1.1",
-    "string": "^3.3.3"
+    "string": "^3.3.3",
+    "webpack-md5-hash": "0.0.5"
   },
   "devDependencies": {
     "node-sass": "^4.5.3",
